# Saniwa

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc  winmain.cpp
Browser/: UserScriptManager.cpp  UserScriptManager.h
Window/: MainWindow.cpp  MainWindow.h  MainWindow.ui
js/: resizeframe.js
